--- a/app/src/main/res/layout/screen_profile.xml
+++ b/app/src/main/res/layout/screen_profile.xml
@@ -7,133 +7,270 @@
 
     <!-- Profile Text -->
     <TextView
-        android:fontFamily="@font/nunito"
         android:id="@+id/text_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/roboto_medium"
         android:text="Profil"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Image Circle -->
     <ImageView
         android:id="@+id/image_profile"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/user"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/text_profile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_width="96dp"
+        android:layout_height="108dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/circle_background"
-        android:layout_marginTop="16dp"/>
+        android:padding="16dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_profile" />
 
     <!-- Edit Name Text -->
     <TextView
-        android:fontFamily="@font/nunito"
         android:id="@+id/text_edit_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Surname Name"
+        android:layout_marginStart="12dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/newyork"
+        android:text="Saidmurod Tursunaliyev"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/image_profile"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/edit_fullName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintStart_toEndOf="@id/image_profile"
+        app:layout_constraintTop_toTopOf="@id/image_profile"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-    <!-- Balance CardView -->
+    <TextView
+        android:id="@+id/edit_fullName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:drawableEnd="@drawable/ic_pencil"
+        android:text="Tahrirlash uchun ustiga bosing"
+        android:textColor="#66000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/image_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/text_edit_name"
+        app:layout_constraintTop_toBottomOf="@id/text_edit_name" />
 
     <!-- Balance ID Text -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_balance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="76dp"
-        android:layout_marginTop="16dp"
-        app:cardBackgroundColor="#1247A3"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="4dp"
         app:cardCornerRadius="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.71"
+        app:layout_constraintEnd_toStartOf="@id/card_ball"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_edit_name">
+        app:layout_constraintTop_toBottomOf="@id/image_profile">
 
         <!-- Balance Text -->
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|start"
+            android:background="@drawable/balanse_back"
             android:orientation="vertical">
 
             <TextView
-                android:fontFamily="@font/nunito"
-                android:id="@+id/text"
+                android:id="@+id/balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingStart="4dp"
-                android:paddingTop="8dp"
-                android:text="Balance: "
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toTopOf="@id/text_balance"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:text="Balans:"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toTopOf="@id/balance_summ"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
-                android:fontFamily="@font/nunito"
-                android:id="@+id/text_balance"
+                android:id="@+id/balance_summ"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="8dp"
-                android:text="0 so'm"
-                android:layout_marginBottom="8dp"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="10dp"
+                android:text="0 So'm"
+                android:textColor="@color/white"
+                android:textSize="22dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text" />
+                app:layout_constraintStart_toStartOf="@id/balance"
+                app:layout_constraintTop_toBottomOf="@id/balance" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:fontFamily="@font/nunito"
-        android:id="@+id/text_balance_id"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_ball"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Balance ID: 1234567890"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/card_balance"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="16dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintStart_toEndOf="@id/card_balance"
+        app:layout_constraintTop_toBottomOf="@id/image_profile">
+
+        <!-- Balance Text -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|start"
+            android:background="@drawable/ball_back"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ball"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:text="Ball:"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toTopOf="@id/ball_summ"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
+
+            <TextView
+                android:id="@+id/ball_summ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="10dp"
+                android:text="0 ball"
+                android:textColor="@color/white"
+                android:textSize="22dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/ball"
+                app:layout_constraintTop_toBottomOf="@id/ball" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/id_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_id"
+        android:padding="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/card_balance"
+        app:layout_constraintTop_toBottomOf="@id/card_balance">
+
+        <TextView
+            android:id="@+id/text_balance_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Hisob raqam: "
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_balance_id_number"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:drawableEnd="@drawable/ic_copy"
+            android:fontFamily="@font/roboto_medium"
+            android:text="1234567890"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_balance_id"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Add Money Button -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_add_money"
-        android:layout_width="wrap_content"
-        android:paddingHorizontal="15dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Add Money"
-
-        android:textColor="@android:color/white"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/blue_button_background"
         android:backgroundTint="#0C79ED"
-        app:layout_constraintTop_toBottomOf="@id/text_balance_id"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Hisobni to'ldirish"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginTop="36dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/id_parent" />
 
+    <View
+        android:id="@+id/view_1"
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/view_bg"
+        app:layout_constraintTop_toBottomOf="@id/button_add_money" />
+
+
+    <TextView
+        android:id="@+id/shopping_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:drawableStart="@drawable/shopping_cart"
+        android:text="  Buyurtma tarixi"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_1" />
+
+    <View
+        android:id="@+id/view_2"
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/view_bg"
+        app:layout_constraintTop_toBottomOf="@id/shopping_history" />
+
+
+    <TextView
+        android:id="@+id/log_out"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:drawableStart="@drawable/log_out"
+        android:fontFamily="@font/roboto"
+        android:text="   Akkauntdan chiqish"
+        android:textSize="18sp"
+        android:layout_marginStart="17dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
