--- a/app/src/main/res/layout/screen_login.xml
+++ b/app/src/main/res/layout/screen_login.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:layout_marginTop="48dp"
-        app:layout_constraintStart_toStartOf="@id/email_input"
+        app:layout_constraintStart_toStartOf="@id/email_edit_text"
         app:layout_constraintTop_toBottomOf="@id/login_text"
         android:id="@+id/gmail_text"
         android:text="Enter gmail"
@@ -49,56 +49,43 @@
         android:layout_height="wrap_content"/>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@id/gmail_text"
-        android:id="@+id/email_input"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <EditText
+        android:layout_marginTop="8dp"
+        android:id="@+id/email_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:boxBackgroundColor="@android:color/transparent"
-        app:errorEnabled="true"
-        tools:ignore="MissingConstraints">
+        android:layout_height="55dp"
+        android:layout_marginHorizontal="24dp"
+        android:background="@drawable/edit_text_bg"
+        android:hint="  example@gmail.com"
+        android:maxLength="30"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/gmail_text"
+        tools:layout_editor_absoluteX="24dp" />
 
-        <EditText
-            android:maxLength="30"
-            android:textColor="@color/white"
-            android:background="@drawable/edit_text_bg"
-            android:id="@+id/email_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="example@gmail.com" />
-
-    </com.google.android.material.textfield.TextInputLayout>
     <TextView
-        app:layout_constraintStart_toStartOf="@id/password_input"
-        app:layout_constraintTop_toBottomOf="@id/email_input"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="@id/password_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
         android:textSize="16sp"
         android:textColor="@color/white"
         android:text="Password"
         android:id="@+id/password_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <com.google.android.material.textfield.TextInputLayout
+
+
+    <EditText
+        android:layout_marginTop="8dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintTop_toBottomOf="@id/password_text"
-        android:id="@+id/password_input"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:textColor="@color/black"
+        android:background="@drawable/edit_text_bg"
+        android:id="@+id/password_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:boxBackgroundColor="@android:color/transparent"
-        app:errorEnabled="true"
-        tools:ignore="MissingConstraints">
+        android:layout_height="55dp"
+        android:hint="  password" />
 
-        <EditText
-            android:textColor="@color/white"
-            android:background="@drawable/edit_text_bg"
-            android:id="@+id/password_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="password" />
 
-    </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:maxLength="15"
         android:id="@+id/enter_btn"
@@ -107,7 +94,7 @@
         android:background="@drawable/button_bg"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/password_input"
+        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
         android:layout_marginHorizontal="24dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
