--- a/app/src/main/res/layout/screen_singup.xml
+++ b/app/src/main/res/layout/screen_singup.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@id/first_input"
+            app:layout_constraintStart_toStartOf="@id/firstName_edit_text"
             app:layout_constraintTop_toBottomOf="@id/login_text"
             android:id="@+id/gmail_text"
             android:text="Enter FirstName"
@@ -53,30 +53,25 @@
             android:layout_height="wrap_content"/>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginHorizontal="24dp"
-            app:layout_constraintTop_toBottomOf="@id/gmail_text"
-            android:id="@+id/first_input"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/firstName_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:errorEnabled="true"
-            tools:ignore="MissingConstraints">
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/edit_text_bg"
+            android:hint="  First Name"
+            android:maxLength="15"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gmail_text" />
 
-            <EditText
-                android:maxLength="15"
-                android:textColor="@color/white"
-                android:background="@drawable/edit_text_bg"
-                android:id="@+id/firstName_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="First Name" />
 
-        </com.google.android.material.textfield.TextInputLayout>
         <TextView
-            app:layout_constraintStart_toStartOf="@id/lastName_input"
-            app:layout_constraintTop_toBottomOf="@id/first_input"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@id/lastName_edit_text"
+            app:layout_constraintTop_toBottomOf="@id/firstName_edit_text"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:text="Enter LastName"
@@ -84,102 +79,88 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginHorizontal="24dp"
-            app:layout_constraintTop_toBottomOf="@id/password_text"
-            android:id="@+id/lastName_input"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+        <EditText
+            android:id="@+id/lastName_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:errorEnabled="true"
-            tools:ignore="MissingConstraints">
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/edit_text_bg"
+            android:hint="  Last Name"
+            android:maxLength="25"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password_text" />
 
-            <EditText
-                android:maxLength="25"
-                android:textColor="@color/white"
-                android:background="@drawable/edit_text_bg"
-                android:id="@+id/lastName_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Last Name" />
 
-        </com.google.android.material.textfield.TextInputLayout>
         <TextView
-            app:layout_constraintStart_toStartOf="@id/lastName_input"
-            app:layout_constraintTop_toBottomOf="@id/lastName_input"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@id/lastName_edit_text"
+            app:layout_constraintTop_toBottomOf="@id/lastName_edit_text"
             android:textSize="16sp"
             android:id="@+id/text_gmail"
             android:textColor="@color/white"
             android:text="Enter gmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginHorizontal="24dp"
-            app:layout_constraintTop_toBottomOf="@id/text_gmail"
-            android:id="@+id/gmail_input"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+
+        <EditText
+            android:id="@+id/edit_gmail_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:errorEnabled="true"
-            tools:ignore="MissingConstraints">
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="24dp"
+            android:background="@drawable/edit_text_bg"
+            android:hint="  example@gmail.com"
+            android:maxLength="30"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_gmail" />
 
-            <EditText
-                android:maxLength="30"
-                android:textColor="@color/white"
-                android:background="@drawable/edit_text_bg"
-                android:id="@+id/edit_gmail_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="example@gmail.com" />
 
-        </com.google.android.material.textfield.TextInputLayout>
         <TextView
-            app:layout_constraintStart_toStartOf="@id/gmail_input"
-            app:layout_constraintTop_toBottomOf="@id/gmail_input"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@id/edit_gmail_text"
+            app:layout_constraintTop_toBottomOf="@id/edit_gmail_text"
             android:textSize="16sp"
             android:id="@+id/text_password"
             android:textColor="@color/white"
             android:text="Enter password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginHorizontal="24dp"
-            app:layout_constraintTop_toBottomOf="@id/text_password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+
+        <EditText
+            android:id="@+id/edit_password_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/password_input"
-            app:boxBackgroundColor="@android:color/transparent"
-            app:errorEnabled="true"
-            tools:ignore="MissingConstraints">
-
-            <EditText
-                android:maxLength="15"
-                android:textColor="@color/white"
-                android:background="@drawable/edit_text_bg"
-                android:id="@+id/edit_password_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="password" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/edit_text_bg"
+            android:hint="  password"
+            android:maxLength="15"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_password" />
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/save_btn"
-            android:layout_marginTop="8dp"
-            android:text="Save"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/button_bg"
+            android:text="Save"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/password_input"
-            android:layout_marginHorizontal="24dp"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edit_password_text" />
 
         <TextView
 
